--- a/src/app/_components/utilities/dropdown/dropdown.scss
+++ b/src/app/_components/utilities/dropdown/dropdown.scss
@@ -137,6 +137,15 @@
   border-radius: 0 0 var(--dropdown-border-radius) var(--dropdown-border-radius);
 }
 
+.dropdown-no-results {
+  padding: var(--dropdown-padding);
+  color: var(--dropdown-primary-color);
+  text-align: center;
+  font-style: italic;
+  opacity: 0.7;
+  user-select: none;
+}
+
 /* Scrollbar styling */
 .dropdown-menu::-webkit-scrollbar {
   width: 6px;
