--- a/src/app/_components/utilities/input/input.scss
+++ b/src/app/_components/utilities/input/input.scss
@@ -25,7 +25,7 @@ label {
     color: var(--red-500);
   }
   input[type='checkbox'] + label:before {
-    border-color: var(--red-500);
+    border-color: var(--red-500) !important;
     background: #FFE9EA;
   }
 }
