--- a/src/app/_components/utilities/offer-gallery/offer-gallery.scss
+++ b/src/app/_components/utilities/offer-gallery/offer-gallery.scss
@@ -28,7 +28,7 @@
 .main-image-container {
   position: relative;
   width: 100%;
-  aspect-ratio: 16 / 10;
+  //aspect-ratio: 16 / 10;
   background: #f8fafc;
   border-radius: 12px;
   overflow: hidden;
