--- a/public/layout/scss/_main.scss
+++ b/public/layout/scss/_main.scss
@@ -11,6 +11,19 @@ html {
   font-family: var(--font-family), sans-serif;
 }
 
+.__loading {
+  position: absolute;
+  z-index: 999;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: rgba(255, 255, 255, 0.5);
+}
+
+
+
 input[type="radio"] {
   -webkit-appearance: none;
   appearance: none;
