--- a/src/app/_components/utilities/modal/modal.scss
+++ b/src/app/_components/utilities/modal/modal.scss
@@ -23,7 +23,7 @@
     position: relative;
     z-index: 1;
     pointer-events: all;
-    max-width: min(48rem, 100%);
+    max-width: 640px;
     width: 100%;
     background: #fff;
     border-radius: 1rem;
