--- a/src/app/_components/utilities/header/header.html
+++ b/src/app/_components/utilities/header/header.html
@@ -1,4 +1,4 @@
-<div [ngClass]="{'opened' : mobileMenuState, 'header--scrolled py-4': isScrolled, 'py-5': !isScrolled}" class="flex py-4 px-7 align-items-center justify-content-between bg-primary-900 header" >
+<div [ngClass]="{'opened' : mobileMenuState, 'header--scrolled py-4': isScrolled, 'py-5': !isScrolled}" class="flex py-4 px-7 align-items-center justify-content-between header" >
   <div class="header--logo">
     <a [routerLink]="'/'">
     <svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 317 62" fill="none" class="block">
